# caselens

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
.agents/: CONTEXT.md  agents.md  hooks.json
.agents/skills/application-security/: SKILL.md
.agents/skills/backend-development/: SKILL.md
.agents/skills/database-engineering/: SKILL.md
.agents/skills/deployment/: SKILL.md
.agents/skills/document-intelligence/: SKILL.md
.agents/skills/legal-rag/: SKILL.md
.agents/workflows/: build-phase.md  plan-phase.md  release-candidate.md  security-review.md  verify-phase.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 88db15a1dd96_init.py  a1f2c3d4e5f6_practice_management.py
apps/api/scripts/: check_ai_provider.py
apps/api/src/caselens/: __init__.py  config.py  dependencies.py  main.py
apps/api/src/caselens/ai_gateway/: __init__.py  chain.py  gemini.py  json_utils.py  mock_providers.py  openai.py  openai_compatible.py  providers.py
apps/api/src/caselens/audit/: router.py
apps/api/src/caselens/auth/: router.py  schemas.py  service.py
apps/api/src/caselens/db/: base.py  models.py  session.py
apps/api/src/caselens/documents/: analysis.py  pipeline.py  router.py  schemas.py  upload.py
apps/api/src/caselens/matters/: __init__.py  router.py  schemas.py
apps/api/src/caselens/organizations/: router.py  schemas.py
apps/api/src/caselens/practice/: __init__.py  router.py  schemas.py
apps/api/src/caselens/rag/: router.py  schemas.py
apps/api/src/caselens/search/: router.py  schemas.py
apps/api/src/caselens/storage/: backend.py
apps/api/tests/: conftest.py  test_ai_gateway_chain.py  test_auth.py  test_matters.py
apps/worker/: pyproject.toml
apps/worker/src/caselens_worker/: __init__.py  config.py  main.py
apps/worker/src/caselens_worker/activities/: __init__.py  chunking.py  embedding.py  extraction.py  indexing.py
apps/worker/src/caselens_worker/workflows/: __init__.py  document_processing.py
docs/: AI_RISK_MANAGEMENT.md  API_SPECIFICATION.md  DATABASE_ERD.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_FREE_HOSTING.md  EVALUATION_PLAN.md  PRODUCT_REQUIREMENTS.md  RAG_AND_CITATION_DESIGN.md  RISK_REGISTER.md  SECURITY_THREAT_MODEL.md  SYSTEM_ARCHITECTURE.md  current-phase.md  release-readiness.md  technical-debt.md
docs/decisions/: 001-modular-monolith.md  002-postgresql-vector.md  003-temporal-workflows.md  004-mock-ai-providers.md  005-jwt-auth-phase1.md  006-s3-storage-abstraction.md
infrastructure/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml  init-db.sql
infrastructure/scripts/: wait-for-services.sh
(+27 files in other folders)
