[project]
name = "caselens-worker"
version = "0.1.0"
description = "CaseIntelix Document Processing Worker"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pymupdf>=1.25.0",
    "tiktoken>=0.8.0",
    "boto3>=1.36.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "caselens-api",
]

[tool.uv.sources]
caselens-api = { path = "../api", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caselens_worker"]

[tool.ruff]
target-version = "py312"
line-length = 100
